--- a/.github/workflows/browsers.yml
+++ b/.github/workflows/browsers.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest, macOS-10.14]
-        browser: [ie, edge, safari, firefox, chrome]
+        browser: [ie, firefox, chrome]
         exclude:
           # On Windows, run tests with only IE and Edge
           - os: windows-latest
@@ -22,14 +22,7 @@ jobs:
           - os: macOS-10.14
             browser: ie
           - os: macOS-10.14
-            browser: edge
-          - os: macOS-10.14
             browser: chrome
-          # Linux - just firefox
-          - os: ubuntu-latest
-            browser: ie
-          - os: ubuntu-latest
-            browser: edge
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -44,8 +37,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      - uses: warrenbuckley/Setup-Nuget@v1
-        if: matrix.os == 'windows-latest' && (matrix.browser == 'ie' || matrix.browser == 'edge')
+      # - uses: warrenbuckley/Setup-Nuget@v1
+      #   if: matrix.os == 'windows-latest' && (matrix.browser == 'ie' || matrix.browser == 'edge')
       - run: npm ci
         env:
           CYPRESS_INSTALL_BINARY: 0
@@ -59,34 +52,37 @@ jobs:
           defaults write com.apple.Safari IncludeInternalDebugMenu 1
           sudo safaridriver --enable
           defaults write com.apple.Safari AllowRemoteAutomation 1
-          # safaridriver -p 0 &
+          safaridriver -p 0 &
         if: matrix.browser == 'safari'
 
       # https://github.com/mozilla/geckodriver/releases
+      # - run: |
+      #     npm i geckodriver
+      #   if: matrix.browser == 'firefox'
+      #   env:
+      #     GECKODRIVER_VERSION: "0.26.0"
       - run: |
-          npm i geckodriver
-        if: matrix.browser == 'firefox'
-        env:
-          GECKODRIVER_VERSION: '0.26.0'
-      - run: brew cask install firefox
+          brew cask install firefox
+          brew install geckodriver
         if: matrix.browser == 'firefox' && matrix.os == 'macOS-10.14'
 
-      - run: npm i chromedriver --chromedriver_version=LATEST
-        if: matrix.browser == 'chrome'
-      - run: choco install googlechrome
-        if: matrix.browser == 'chrome' && matrix.os == 'windows-latest'
+      # - run: npm i chromedriver --chromedriver_version=LATEST
+      #   if: matrix.browser == 'chrome'
+      # - run: choco install googlechrome
+      #   if: matrix.browser == 'chrome' && matrix.os == 'windows-latest'
 
-      - run: |
-          nuget install Selenium.WebDriver.IEDriver -Version 3.150.1
-          echo "::add-path::${{ github.workspace }}\\Selenium.WebDriver.IEDriver.3.150.1\\driver\\"
-        if: matrix.browser == 'ie'
+      # - run: |
+      #     nuget install Selenium.WebDriver.IEDriver -Version 3.150.1
+      #     echo "::add-path::${{ github.workspace }}\\Selenium.WebDriver.IEDriver.3.150.1\\driver\\"
+      # - run: choco install selenium-ie-driver
+      #   if: matrix.browser == 'ie'
 
       # - run: DISM.exe /Online /Add-Capability /CapabilityName:Microsoft.WebDriver~~~~0.0.1.0
       # if: matrix.browser == 'edge'
-      - run: |
-          nuget install Selenium.WebDriver.MicrosoftDriver -Version 17.17134.0
-          echo "::add-path::${{ github.workspace }}\\Selenium.WebDriver.MicrosoftDriver.17.17134.0\\driver\\"
-        if: matrix.browser == 'edge'
+      # - run: |
+      #     nuget install Selenium.WebDriver.MicrosoftDriver -Version 17.17134.0
+      #     echo "::add-path::${{ github.workspace }}\\Selenium.WebDriver.MicrosoftDriver.17.17134.0\\driver\\"
+      #   if: matrix.browser == 'edge'
 
       - run: npm i selenium-webdriver pixelmatch pngjs
       - run: node .github/actions-scripts/selenium.js
