--- a/.github/workflows/browsers.yml
+++ b/.github/workflows/browsers.yml
@@ -50,6 +50,7 @@ jobs:
           defaults write com.apple.Safari IncludeDevelopMenu 1
           defaults write com.apple.Safari AllowJavaScriptFromAppleEvents 1
           defaults write com.apple.Safari IncludeInternalDebugMenu 1
+          brew cask install safari-technology-preview
           sudo safaridriver --enable
           defaults write com.apple.Safari AllowRemoteAutomation 1
           safaridriver -p 0 &
@@ -65,6 +66,15 @@ jobs:
           brew cask install firefox
           brew install geckodriver
         if: matrix.browser == 'firefox' && matrix.os == 'macOS-10.14'
+
+      - run: echo "::add-path::$GeckoWebDriver"
+        if: matrix.browser == 'firefox' && matrix.os == 'window-latest'
+
+      - run: echo "::add-path::$IEWebDriver"
+        if: matrix.browser == 'ie' && matrix.os == 'window-latest'
+
+      - run: echo "::add-path::$ChromeWebDriver"
+        if: matrix.browser == 'chrome' && matrix.os == 'window-latest'
 
       # - run: npm i chromedriver --chromedriver_version=LATEST
       #   if: matrix.browser == 'chrome'
