--- a/.github/workflows/browsers.yml
+++ b/.github/workflows/browsers.yml
@@ -45,14 +45,14 @@ jobs:
       # install drivers
       - name: Enable Safari Driver
         run: |
-          brew tap homebrew/cask-versions
-          brew cask install safari-technology-preview
+          # brew tap homebrew/cask-versions
+          # brew cask install safari-technology-preview
           sudo safaridriver --enable
-          defaults com.apple.SafariTechnologyPreview IncludeDevelopMenu 1
-          defaults com.apple.SafariTechnologyPreview AllowJavaScriptFromAppleEvents 1
-          defaults com.apple.SafariTechnologyPreview IncludeInternalDebugMenu 1
-          defaults write com.apple.SafariTechnologyPreview AllowRemoteAutomation 1
-          # safaridriver -p 0 &
+          defaults write -app Safari IncludeDevelopMenu 1
+          defaults wrtie -app Safari AllowJavaScriptFromAppleEvents 1
+          defaults write -app Safari IncludeInternalDebugMenu 1
+          defaults write -app Safari AllowRemoteAutomation 1
+          safaridriver -p 0 &
         if: matrix.browser == 'safari'
 
       - run: |
