--- a/.github/workflows/browsers.yml
+++ b/.github/workflows/browsers.yml
@@ -2,8 +2,13 @@ name: Browsers
 
 on:
   pull_request:
-    branches:
-      - master
+    paths:
+      - 'src/'
+      - 'package-lock.json'
+      - '.browserslistrc'
+      - '.babelrc'
+      - 'webpack.config.*'
+      - 'public/index.html'
 
 jobs:
   selenium:
