run on chages to snapshots

--- a/.github/workflows/browsers.yml
+++ b/.github/workflows/browsers.yml
@@ -9,6 +9,7 @@ on:
       - '.babelrc'
       - 'webpack.config.*'
       - 'public/index.html'
+      - '.github/actions-scripts/__snapshots__'
 
 jobs:
   selenium:
