--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -67,7 +67,8 @@
       "Symbol.iterator",
       "Object.assign",
       "CustomEvent",
-      "Element.prototype.classList"
+      "Element.prototype.classList",
+      "Element.prototype.closest"
     ]
   }
 }
