--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,15 @@
 {
   "presets": [["@babel/preset-env", { "loose": true }]],
+  "plugins": [
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    "@babel/plugin-proposal-nullish-coalescing-operator",
+    [
+      "@babel/plugin-proposal-optional-chaining",
+      {
+        "loose": true
+      }
+    ]
+  ],
   "env": {
     "test": {
       "presets": [
