--- a/package.json
+++ b/package.json
@@ -55,8 +55,13 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/preset-env": "^7.6.3",
     "@babel/register": "^7.6.2",
+    "@typescript-eslint/eslint-plugin": "^2.6.0",
+    "@typescript-eslint/parser": "^2.6.0",
     "autoprefixer": "^9.6.5",
     "babel-loader": "^8.0.6",
     "bundlesize": "^0.18.0",
@@ -84,6 +89,7 @@
     "postcss-cli": "^6.1.3",
     "prettier": "^1.18.2",
     "sinon": "^7.5.0",
+    "typescript": ">=3.7.1-rc",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-middleware": "^3.7.2",
