Add refactor label

--- a/.github/workflows/release-management.yml
+++ b/.github/workflows/release-management.yml
@@ -30,6 +30,7 @@ jobs:
             labels:
               - 'chore'
               - 'housekeeping'
+              - 'refactor'
         change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
         template: |
           $CHANGES
