add all cypress files

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -9,6 +9,7 @@ on:
       - '.babelrc'
       - 'webpack.config.*'
       - 'public/test/**'
+      - 'cypress/**'
       - '.github/workflows/cypress.yml'
 
 jobs:
