Deploy on published release

--- a/.github/workflows/bundlesize.yml
+++ b/.github/workflows/bundlesize.yml
@@ -1,4 +1,4 @@
-name: BundleSize
+name: Bundle size checks
 
 on:
   pull_request:
@@ -22,8 +22,8 @@ jobs:
 
       - name: Install dependencies and build
         run: |
-                npm ci
-                npm run build
+          npm ci
+          npm run build
         env:
           CYPRESS_INSTALL_BINARY: 0
           HUSKY_SKIP_INSTALL: true
