--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,4 +1,4 @@
-name: Cypress
+name: End-to-end tests
 
 on:
   pull_request:
@@ -14,7 +14,7 @@ on:
 
 jobs:
   test-e2e:
-    name: integration tests
+    name: e2e tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
