--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bundlesize": "bundlesize",
     "cypress:run": "$(npm bin)/cypress run",
     "cypress:open": "$(npm bin)/cypress open",
-    "cypress:ci": "cypress run --record --group --ci-build-id $GITHUB_SHA",
+    "cypress:ci": "cypress run --record --group $GITHUB_REF --ci-build-id $GITHUB_SHA",
     "test": "run-s test:unit test:e2e",
     "test:unit": "NODE_ENV=test mocha",
     "test:unit:watch": "NODE_ENV=test mocha --watch --inspect=5556",
