--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -17,7 +17,10 @@ categories:
       - 'chore'
       - 'housekeeping'
       - 'refactor'
+      - 'documentation'
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 template: |
+  # Changes
   $CHANGES
+  # Contributors
   $CONTRIBUTORS
