add prettier override

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,6 +8,12 @@
         "parser": "html",
         "htmlWhitespaceSensitivity": "ignore"
       }
+    },
+    {
+      "files": ["public/*.html"],
+      "options": {
+        "trailingComma": "es5"
+      }
     }
   ]
 }
