Add failure case to e2e test workflow

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -29,8 +29,23 @@ jobs:
         env:
           HUSKY_SKIP_INSTALL: true
 
-      - name: run Cypress CI
+      - name: run Cypress (with recording)
         run: npx run-p --race start cypress:ci
+        env:
+          CI: true
+          TERM: xterm-256color
+          NODE_ENV: production # prevent watching
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          DEBUG: commit-info,cypress:server:record
+          # https://docs.cypress.io/guides/guides/continuous-integration.html#Environment-variables
+          COMMIT_INFO_BRANCH: ${{ github.head_ref }}
+          COMMIT_INFO_AUTHOR: ${{ github.event.sender.login }}
+          COMMIT_INFO_SHA: ${{ github.event.after }}
+
+      # if we have ran out of free Cypress recordings, run Cypress with recording switched off
+      - name: run Cypress (without recording)
+        if: failure()
+        run: npx run-p --race start cypress:run
         env:
           CI: true
           TERM: xterm-256color
