--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "postcss-cli": "^6.1.3",
     "prettier": "^1.18.2",
     "sinon": "^7.5.0",
+    "sinon-chai": "^3.3.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-middleware": "^3.7.2",
