remove safari test

--- a/.github/workflows/browsers.yml
+++ b/.github/workflows/browsers.yml
@@ -28,6 +28,8 @@ jobs:
             browser: ie
           - os: macOS-latest
             browser: chrome
+          # Safari workaround is not working in Catalina
+          - browser: safari
 
     runs-on: ${{ matrix.os }}
     steps:
