--- a/.github/workflows/browsers.yml
+++ b/.github/workflows/browsers.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: node_modules
-          key: ${{ runner.OS }}-build-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.OS }}-build-${{ hashFiles('**package-lock.json') }}
           restore-keys: |
             ${{ runner.OS }}-build-${{ env.cache-name }}-
             ${{ runner.OS }}-build-
