--- a/.github/workflows/browsers.yml
+++ b/.github/workflows/browsers.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ~/.npm
-          key: ${{ runner.OS }}-build
+          key: ${{ runner.OS }}-build-${{ matrix.browser }}
           restore-keys: |
             ${{ runner.OS }}-build-${{ env.cache-name }}-
             ${{ runner.OS }}-build-
@@ -113,9 +113,7 @@ jobs:
           path: ~/.npm
           key: ${{ runner.OS }}-build-puppeteer
           restore-keys: |
-            ${{ runner.OS }}-build-${{ env.cache-name }}-
-            ${{ runner.OS }}-build-
-            ${{ runner.OS }}-
+            ${{ runner.OS }}-build-puppeteer
       - run: |
           npm ci
           npm run build
