--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -18,13 +18,6 @@ jobs:
     env:
       CI: true
       TERM: xterm-256color
-      NODE_ENV: production # prevent watching
-      CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-      DEBUG: commit-info,cypress:server:record
-      # https://docs.cypress.io/guides/guides/continuous-integration.html#Environment-variables
-      COMMIT_INFO_BRANCH: ${{ github.head_ref }}
-      COMMIT_INFO_AUTHOR: ${{ github.event.sender.login }}
-      COMMIT_INFO_SHA: ${{ github.event.after }}
 
     steps:
       - uses: actions/checkout@v1
@@ -56,11 +49,9 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ${{ steps.cypress-info.outputs.cache }}
-          key: ${{ runner.OS }}-build-${{ steps.cypress-info.outputs.version }}
+          key: ${{ runner.OS }}-cypress-${{ steps.cypress-info.outputs.version }}
           restore-keys: |
-            ${{ runner.OS }}-build-${{ env.cache-name }}-
-            ${{ runner.OS }}-build-
-            ${{ runner.OS }}-
+            ${{ runner.OS }}-cypress-${{ steps.cypress-info.outputs.version }}
 
       - name: Install dependencies
         run: npm ci
@@ -68,9 +59,13 @@ jobs:
           HUSKY_SKIP_INSTALL: true
 
       - name: run Cypress (with recording)
-        run: npx run-p --race start cypress:ci
-
-      # if we have ran out of free Cypress recordings, run Cypress with recording switched off
-      - name: run Cypress (without recording)
-        if: failure()
-        run: npx run-p --race start cypress:run
+        # if we have ran out of free Cypress recordings, run Cypress with recording switched off
+        run: npx run-p --race start cypress:ci || npx run-p --race start cypress:run
+        env:
+          NODE_ENV: production # prevent watching
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          DEBUG: commit-info,cypress:server:record
+          # https://docs.cypress.io/guides/guides/continuous-integration.html#Environment-variables
+          COMMIT_INFO_BRANCH: ${{ github.head_ref }}
+          COMMIT_INFO_AUTHOR: ${{ github.event.sender.login }}
+          COMMIT_INFO_SHA: ${{ github.event.after }}
