--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "run-p js:build css:build",
     "lint": "eslint src/scripts",
     "bundlesize": "bundlesize",
-    "cypress:run": "$(npm bin)/cypress run",
-    "cypress:open": "$(npm bin)/cypress open",
+    "cypress:run": "cypress run",
+    "cypress:open": "cypress open",
     "cypress:ci": "cypress run --record --group $GITHUB_REF --ci-build-id $GITHUB_SHA",
     "test": "run-s test:unit test:e2e",
     "test:unit": "NODE_ENV=test mocha",
