--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git commit -m "Update build files 🏗" -a
+          git commit -m "Update build files 🏗" -a || echo "No changes to commit" && exit 0
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
