--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:unit:watch": "NODE_ENV=test mocha --watch --inspect=5556",
     "test:unit:coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=text --reporter=text-summary mocha",
     "test:e2e": "run-p --race start cypress:run",
-    "js:watch": "cross-env node server.js",
+    "js:watch": "cross-env NODE_ENV=development node server.js",
     "js:build": "webpack --config webpack.config.prod.js",
     "css:watch": "nodemon -e scss -x \"npm run css:build\"",
     "css:build": "run-s css:sass css:prefix css:min",
