Typescript config setup

--- a/.mocharc.yml
+++ b/.mocharc.yml
@@ -1,7 +1,7 @@
 require:
-  - '@babel/register'
+  - 'ts-node/register'
   - './config/jsdom.js'
 
 exit: true
 
-spec: src/**/*.test.js
+spec: src/**/*.test.ts
