--- a/package.json
+++ b/package.json
@@ -56,6 +56,12 @@
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
     "@babel/register": "^7.6.2",
+    "@types/chai": "^4.2.7",
+    "@types/mocha": "^5.2.7",
+    "@types/sinon": "^7.5.1",
+    "@types/sinon-chai": "^3.2.3",
+    "@typescript-eslint/eslint-plugin": "^2.11.0",
+    "@typescript-eslint/parser": "^2.11.0",
     "autoprefixer": "^9.6.5",
     "babel-loader": "^8.0.6",
     "bundlesize": "^0.18.0",
@@ -85,6 +91,9 @@
     "prettier": "^1.18.2",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-middleware": "^3.7.2",
