--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "cypress:open": "cypress open",
     "cypress:ci": "cypress run --record --group $GITHUB_REF --ci-build-id $GITHUB_SHA",
     "test": "run-s test:unit test:e2e",
-    "test:unit": "NODE_ENV=test mocha",
-    "test:unit:watch": "NODE_ENV=test mocha --watch --inspect=5556",
+    "test:unit": "TS_NODE_TRANSPILE_ONLY=true NODE_ENV=test mocha",
+    "test:unit:watch": "npm run test:unit -- --watch --inspect=5556",
     "test:unit:coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=text --reporter=text-summary mocha",
     "test:e2e": "run-p --race start cypress:run",
     "js:watch": "cross-env NODE_ENV=development node server.js",
