Convert cypress files to .ts

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
   "env": {
     "es6": true,
     "browser": true,
-    "mocha": true
+    "mocha": true,
+    "cypress": true
   },
   "parserOptions": {
     "project": "./tsconfig.json",
