Fix lint script

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,7 +73,9 @@
         "no-restricted-syntax": "off",
         "compat/compat": "off",
         "no-new": "off",
-        "@typescript-eslint/no-empty-function": "off"
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-non-null-assertion": "off"
       }
     },
     {
