--- a/.mocharc.yml
+++ b/.mocharc.yml
@@ -2,7 +2,7 @@ require:
   - 'ts-node/register'
   - './config/jsdom.js'
 exit: true
-spec: src/**/*.test.ts
+spec: src/**/**/*.test.ts
 extension:
   - ts
   - js
